--- a/src/AzSK/Framework/Configurations/AzSkSettings.json
+++ b/src/AzSK/Framework/Configurations/AzSkSettings.json
@@ -5,5 +5,5 @@
    "UsageTelemetryLevel": "Anonymous",
    "LocalControlTelemetryKey": "00000000-0000-0000-0000-000000000000",
    "LocalEnableControlTelemetry": false,
-   "AutoUpdateCommand": "Install-Module AzSK -AllowClobber -Scope CurrentUser"
+   "AutoUpdateCommand": "Install-Module AzSK -AllowClobber -Scope CurrentUser -Force"
 }
