added control logic and json

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -352,7 +352,9 @@
   },
   "SubscriptionCore": {
     "EnableV1AlertFailure": false,
-    "ASCTier": "Standard"
+    "ASCTier": "Standard",
+    "credHighTH": 7,
+    "credModerateTH": 30
   },
   "HDInsight": {
     "MinSupportedClusterVersion": "3.6.0"
