Added whitelisting for Non-AD identities and removed code for severity filter using controlIds

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -352,7 +352,9 @@
   },
   "SubscriptionCore": {
     "EnableV1AlertFailure": false,
-    "ASCTier": "Standard"
+    "ASCTier": "Standard",
+    "NonADIdentitiesPatterns" : ["(.)*#ext#@(.)*.onmicrosoft.com"],
+    "WhitelistedNonADIndentitiesPatterns" : []
   },
   "HDInsight": {
     "MinSupportedClusterVersion": "3.6.0"
