Removed Linux tag from Azure_AppService_DP_Dont_Allow_HTTP_Access_Fn

--- a/src/AzSK/Framework/Configurations/SVT/Services/AppService.json
+++ b/src/AzSK/Framework/Configurations/SVT/Services/AppService.json
@@ -609,8 +609,7 @@
           "DP",
           "OwnerAccess",
           "FunctionApp",
-          "Windows",
-          "Linux"
+          "Windows"
         ],
        "Enabled": true
       },
