Whitelisting 'MS-PIM' account for PIM control

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -120,7 +120,12 @@
     "Thumbprints": [],
     "ApprovedValidityRangeInDays": 732
   },
-  "WhitelistedCustomRBACRoles": [
+  "WhitelistedPermanentRoles": [
+    {
+      "DisplayName": "MS-PIM"
+    }
+  ],
+ "WhitelistedCustomRBACRoles": [
     {
       "Id": "21d96096-b162-414a-8302-d8354f9d91b2",
       "Name": "Azure Service Deploy Release Management Contributor"
