--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -290,19 +290,19 @@
     "TagValue": "Databricks"
   },
   "StorageDiagnosticsSkuMapping": [
-    "StandardGRS",
-    "StandardLRS",
-    "StandardRAGRS",
-    "StandardZRS"
+    "Standard_GRS",
+    "Standard_LRS",
+    "Standard_RAGRS",
+    "Standard_ZRS"
   ],
   "StorageAlertSkuMapping": [
-    "StandardGRS",
-    "StandardLRS",
-    "StandardRAGRS"
+    "Standard_GRS",
+    "Standard_LRS",
+    "Standard_RAGRS"
   ],
   "StorageGeoRedundantSku": [
-    "StandardGRS",
-    "StandardRAGRS"
+    "Standard_GRS",
+    "Standard_RAGRS"
   ],
   "LockedResourcesTags": [
     {
